updated gitignore to exclude the dsstore files and updated scratch code

--- a/Ben_Scratch_Code.ipynb
+++ b/Ben_Scratch_Code.ipynb
@@ -1016,7 +1016,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##code going off bobby's notebook to make bar chart of Boeing and Airbus\n",
+    "## vs. Puropose of flight to show Instructional with heavy aircraft is safe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_30['Purpose.of.flight'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_30['Purpose.of.flight'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_30 = df_30[df_30['Purpose.of.flight'] != 'Unknown']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_30['Purpose.of.flight'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Boeing = df_30[df_30['Make'] == 'Boeing']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Create a list of the top 5 purposes of flights\n",
+    "#Purpose_Frequencies = Boeing['Purpose.of.flight'].value_counts()\n",
+    "#Top_Purposes = list(Purpose_Frequencies.index[0:5])\n",
+    "#Top_Purposes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Create a list of the counts of the top 5 purposes of flights\n",
+    "#Top_Purpose_Counts = list(Purpose_Frequencies.values[0:5])\n",
+    "#Top_Purpose_Counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fig, ax = plt.subplots()\n",
+    "\n",
+    "#x = Top_Purposes\n",
+    "#y = Top_Purpose_Counts\n",
+    "\n",
+    "#ax.bar(x, y)\n",
+    "#ax.set_title('Top 5 Purposes of Boeing Flights')\n",
+    "#ax.set_ylabel('Amount of Accidents')\n",
+    "#ax.set_xlabel('Purpose of Flight')\n",
+    "#ax.set_xticklabels(x, rotation=45);\n",
+    "#plt.savefig('Boeing_Bar_Chart.png', bbox_inches='tight');"
+   ]
   }
  ],
  "metadata": {
