Added conclusion, recommendations, and methods to notebook and README.md

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -380,7 +380,7 @@
    "metadata": {},
    "source": [
     "## Clean Event.Id Column\n",
-    "### This removes nulls from Event.Id, Investigation.Type, Accident.Number, and Event.Date"
+    "### This removes nulls from `Event.Id`, `Investigation.Type`, `Accident.Number`, and `Event.Date`."
    ]
   },
   {
@@ -1649,7 +1649,7 @@
     "- The exception to this rule is Boeing, the fourth riskiest `Make`.\n",
     "\n",
     " ### Out of large commercial aircraft, we recommend the Airbus A350 and the Airbus A220:\n",
-    "- Overwhelmingly, the largest commercial passenger aircraft manufacturers are Boeing and Airbus.\n",
+    "- The largest commercial passenger aircraft manufacturers by a longshot are Boeing and Airbus.\n",
     "- Among these, we found that Airbus aircraft were involved in fewer incidents over the past 30 years. \n",
     "- Among the Airbus aircraft still in production, the A350 was the safest -- having suffered no incidents to date. \n",
     "- The A350 is a long-range/wide-body aircraft. Airlines considering leasing our aircraft are likely operating both the long-range/wide-body types of aircraft as well as the short-range/narrow-body types.\n",
